@@ -1,0 +1,6 @@
+#!/usr/bin/env bash
+
+if [[ -r ./.gitconfig ]]; then
+  ln -s $HOME/.gitconfig ./.gitconfig
+fi
+
